<resources>
    <string name="app_name">DirtyMobile</string>
    <string name="shared_preferences">SHARED PREFERENCES</string>
    <string name="sqlite_databases">SQLITE DATABASES</string>
    <string name="realm_databases">REALM DATABASES</string>
    <string name="internal_storage">INTERNAL STORAGE</string>
    <string name="external_storage">EXTERNAL STORAGE</string>
    <string name="logs">LOGS</string>
    <string name="keyboard_cache">KEYBOARD CACHE</string>
    <string name="backups">BACKUPS</string>
    <string name="ipc">IPC</string>
    <string name="owasp_mobile_appsec_verification_standard">OWASP MASVS Playground</string>
    <string name="v2_data_storage_and_privacy">V2- DATA STORAGE AND PRIVACY</string>
    <string name="v3_cryptography">V3- CRYPTOGRAPHY</string>
    <string name="v4_authentication_and_session_management">V4- AUTHENTICATION AND SESSION MANAGEMENT</string>
    <string name="v5_network_communication">V5- NETWORK COMMUNICATION</string>
    <string name="v6_platform_interaction">V6- PLATFORM INTERACTION</string>
    <string name="v7_code_quality_and_build_settings">V7- CODE QUALITY AND BUILD SETTINGS</string>
    <string name="create_db">CREATE TABLE IF NOT EXISTS Credentials(Username VARCHAR, Password VARCHAR);</string>
    <string name="title_activity_v1337">V1337</string>
    <string name="enter_name">Enter name</string>
    <string name="button">Button</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="send">SEND</string>
    <string name="enter_pin_code_to_access_restricted_area">Enter PIN code to access restricted area</string>
    <string name="pin">PIN</string>
    <string name="submit">SUBMIT</string>
    <string name="congratz">Congratz</string>
    <string name="activities">ACTIVITIES</string>
    <string name="services">SERVICES</string>
    <string name="intents">INTENTS</string>
    <string name="content_providers">CONTENT PROVIDERS</string>
    <string name="cryptography_is_an_essential_ingredient_when_it_comes_to_protecting_data_stored_on_a_mobile_device_it_is_also_a_category_where_things_can_go_horribly_wrong_especially_when_standard_conventions_are_not_followed_the_purpose_of_the_controls_in_this_chapter_is_to_ensure_that_the_verified_application_uses_cryptography_according_to_industry_best_practices">Cryptography is an essential ingredient when it comes to protecting data stored on a mobile device. It is also a category where things can go horribly wrong, especially when standard conventions are not followed. The purpose of the controls in this chapter is to ensure that the verified application uses cryptography according to industry best practices.</string>
    <string name="key_management">KEY MANAGEMENT</string>
    <string name="random_number">RANDOM NUMBER</string>
    <string name="the_purpose_of_the_controls_listed_in_this_section_is_to_ensure_the_confidentiality_and_integrity_of_information_exchanged_between_the_mobile_app_and_remote_service_endpoints_at_the_very_least_a_mobile_app_must_set_up_a_secure_encrypted_channel_for_network_communication_using_the_tls_protocol_with_appropriate_settings_level_2_lists_additional_defense_in_depth_measure_such_as_ssl_pinning">The purpose of the controls listed in this section is to ensure the confidentiality and integrity of information exchanged between the mobile app and remote service endpoints. At the very least, a mobile app must set up a secure, encrypted channel for network communication using the TLS protocol with appropriate settings. Level 2 lists additional defense-in-depth measure such as SSL pinning.</string>
    <string name="unencrypted">UNENCRYPTED</string>
    <string name="ssl_pinning">SSL PINNING</string>
    <string name="the_controls_in_this_group_ensure_that_the_app_uses_platform_apis_and_standard_components_in_a_secure_manner_additionally_the_controls_cover_communication_between_apps_ipc">The controls in this group ensure that the app uses platform APIs and standard components in a secure manner. Additionally, the controls cover communication between apps (IPC).</string>
    <string name="input_validation">INPUT VALIDATION</string>
    <string name="url_schemes">URL SCHEMES</string>
    <string name="sensitive_functionality_exposure_through_ipc">SENSITIVE FUNCTIONALITY EXPOSURE THROUGH IPC</string>
    <string name="javascript_execution_in_webviews">JAVASCRIPT EXECUTION IN WEBVIEWS</string>
    <string name="webview_protocol_handlers">WEBVIEW PROTOCOL HANDLERS</string>
    <string name="java_objects_through_webviews">JAVA OBJECTS THROUGH WEBVIEWS</string>
</resources>
