<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@color/blackBackground"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blackBackground"
        tools:context=".V2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="The protection of sensitive data, such as user credentials and private information, is a key focus in mobile security. Firstly, sensitive data can be unintentionally exposed to other apps running on the same device if operating system mechanisms like IPC are used improperly. Data may also unintentionally leak to cloud storage, backups, or the keyboard cache."
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnShared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/shared_preferences" />

        <Button
            android:id="@+id/btnSqlite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/sqlite_databases" />

        <Button
            android:id="@+id/btnInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/internal_storage" />

        <Button
            android:id="@+id/btnExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/external_storage" />

        <Button
            android:id="@+id/btnLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/logs" />

        <Button
            android:id="@+id/btnKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/keyboard_cache" />

        <Button
            android:id="@+id/btnIPC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/ipc" />
    </LinearLayout>
</ScrollView>