<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@color/blackBackground"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blackBackground"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/owasp_mobile_appsec_verification_standard"
            android:textColor="@color/colorWhite"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/v2_data_storage_and_privacy" />

        <Button
            android:id="@+id/btnV3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/v3_cryptography" />

        <Button
            android:id="@+id/btnV5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/v5_network_communication" />

        <Button
            android:id="@+id/btnV6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorOrange"
            android:text="@string/v6_platform_interaction" />

    </LinearLayout>
</ScrollView>