<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blackBackground"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/enter_pin_code_to_access_restricted_area"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/etPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pin"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorOrange"
        android:text="@string/submit" />
</LinearLayout>